--- a/btsite/package.json
+++ b/btsite/package.json
@@ -2,6 +2,7 @@
   "name": "btsite",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://btoprani.github.com.io/Portfolio",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.10.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "prod -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
