--- a/btsite/package.json
+++ b/btsite/package.json
@@ -2,7 +2,7 @@
   "name": "btsite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://btoprani.github.com.io/Portfolio",
+  "homepage": "https://btoprani.github.com.io",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.10.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,8 +12,10 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "chart.js": "^4.4.2",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
