Cut down on text, updated some assets, added all assets but demo and annotated hifi wireframes. Added J.Crew content.

--- a/btsite/package.json
+++ b/btsite/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "add-domain": "echo www.toprani.quest > build/CNAME",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
