--- a/btsite/package.json
+++ b/btsite/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
     "chart.js": "^4.4.2",
+    "copyfiles": "^2.4.1",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -27,9 +28,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "add-domain": "echo www.toprani.quest > build/CNAME",
     "start": "react-scripts start",
-    "build": "react-scripts build && cp build/index.html build/404.html",
+    "build": "react-scripts build && copyfiles -f CNAME build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
