--- a/btsite/package.json
+++ b/btsite/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-scrollbars-custom": "^4.1.1",
     "sass": "^1.66.1",
     "styled-components": "^6.1.8",
     "typescript": "^3.2.1",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.34"
   }
 }
