--- a/btsite/package.json
+++ b/btsite/package.json
@@ -12,19 +12,22 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "@types/react-helmet": "^6.1.11",
     "chart.js": "^4.4.2",
     "copyfiles": "^2.4.1",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-scrollbars-custom": "^4.1.1",
     "sass": "^1.66.1",
     "styled-components": "^6.1.8",
     "typescript": "^3.2.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.18.0"
   },
   "scripts": {
     "predeploy": "npm run build",
