--- a/btsite/package.json
+++ b/btsite/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.2",
     "copyfiles": "^2.4.1",
     "gh-pages": "^6.1.1",
+    "hamburger-react": "^2.5.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
